# TIGRE

./: CMakeLists.txt  README.md  package.xml
include/: graph.cpp  graph.hpp  graph_old.cpp
launch/: exploration_rviz.rviz  move_base.xml  move_base_cave_new.launch
results/: AreaCoverage.eps  AutoFirst.eps  AutoFirst.ods  AutoSecond.eps  AutoSecond.ods  Condensed Results.ods  HamiltonianPath.eps  HamiltonianResults.ods  ProcessingTime.eps  Results.txt  Results_combined.ods  RouteInspectionPath.eps  RouteInspectionPath.ods  TremauxPath.eps  TremauxPath.ods
results/explo_images/: CPP_error.eps  Explo_error.eps  TSP_error.eps
results/explo_images/Tight/: Area_Coverage.eps  CPP_Graph.eps  CPP_occ.eps  Error_Evolution.eps  Explo_graph_full.eps  Explo_occ.eps  Greedy_Graph.eps  Greedy_occ.eps  Processing_Time.eps  Results_Condensed.ods  TIGRE_graph_begin.eps  TIGRE_graph_full.eps  TIGRE_graph_half.eps  TIGRE_occ_begin.eps  TIGRE_occ_full.eps  TIGRE_occ_half.eps  TSP_Graph.eps  TSP_occ.eps
src/: exp_tremaux.cpp
worlds/: autolab.world  cave.world
